--- a/GrupoEmpresarial-war/web/WEB-INF/web.xml
+++ b/GrupoEmpresarial-war/web/WEB-INF/web.xml
@@ -15,12 +15,12 @@
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
-<!-- Definir este parámetro es más cómodo y más visual que usar el <ui:remove> de Facelets. -->
+    <!-- Definir este parámetro es más cómodo y más visual que usar el <ui:remove> de Facelets. -->
     <context-param>
         <description>Do not render comments in facelets (xhtml) pages. Default is false.</description>
         <param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
         <param-value>true</param-value>
-    </context-param>      
+    </context-param>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
@@ -33,11 +33,11 @@
         <param-value>bootstrap</param-value>
     </context-param>
     <filter>
-      <filter-name>Filtro</filter-name>
-      <filter-class>com.nerv.sai.seguridad.Filtro</filter-class>
+        <filter-name>Filtro</filter-name>
+        <filter-class>com.dane.ige.seguridad.Filtro</filter-class>
     </filter>
     <filter-mapping>
-      <filter-name>Filtro</filter-name>
-      <url-pattern>/*</url-pattern>
-    </filter-mapping>    
+        <filter-name>Filtro</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
