--- a/GrupoEmpresarial-war/nbproject/project.properties
+++ b/GrupoEmpresarial-war/nbproject/project.properties
@@ -46,7 +46,8 @@ javac.classpath=\
     ${reference.GrupoEmpresarial-ejb.dist}:\
     ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.primefaces-5.2.jar}:\
-    ${file.reference.commons-lang3-3.0.jar}
+    ${file.reference.commons-lang3-3.0.jar}:\
+    ${libs.JasperLibrarie.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
