--- a/GrupoEmpresarial-war/src/java/com/dane/main/sistema.properties
+++ b/GrupoEmpresarial-war/src/java/com/dane/main/sistema.properties
@@ -6,3 +6,7 @@ footer.title=Pie p\u00e1gina
 footer.copyright=@DANE
 
 menu.title=Men\u00fa
+
+# URL reportes
+reporte.grupoEmpresarial.archivo = lista-usuarios.jrxml
+reporte.grupoEmpresarial.path = C:\\datos\\DEE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-grupo-empresarial\\
