--- a/GrupoEmpresarial-war/web/WEB-INF/web.xml
+++ b/GrupoEmpresarial-war/web/WEB-INF/web.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <welcome-file-list>
+        <welcome-file>index.xhtml</welcome-file>
+    </welcome-file-list>
     <session-config>
         <session-timeout>
             30
@@ -25,9 +28,6 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
-    <welcome-file-list>
-        <welcome-file>index.xhtml</welcome-file>
-    </welcome-file-list>
     <context-param>
         <param-name>primefaces.THEME</param-name>
         <param-value>bootstrap</param-value>
@@ -38,6 +38,6 @@
     </filter>
     <filter-mapping>
         <filter-name>Filtro</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/interfaz/*</url-pattern>
     </filter-mapping>
 </web-app>
