--- a/GrupoEmpresarial-war/nbproject/project.properties
+++ b/GrupoEmpresarial-war/nbproject/project.properties
@@ -30,8 +30,17 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.1.jar=web/WEB-INF/lib/commons-fileupload-1.3.1.jar
+file.reference.commons-io-2.2.jar=web/WEB-INF/lib/commons-io-2.2.jar
 file.reference.commons-lang3-3.0.jar=web/WEB-INF/lib/commons-lang3-3.0.jar
+file.reference.iText-2.1.7.jar=web/WEB-INF/lib/iText-2.1.7.jar
 file.reference.log4j-1.2.17.jar=web/WEB-INF/lib/log4j-1.2.17.jar
+file.reference.poi-3.11.jar=web/WEB-INF/lib/poi-3.11.jar
+file.reference.poi-examples-3.11-20141221.jar=web/WEB-INF/lib/poi-examples-3.11-20141221.jar
+file.reference.poi-excelant-3.11-20141221.jar=web/WEB-INF/lib/poi-excelant-3.11-20141221.jar
+file.reference.poi-ooxml-3.11-20141221.jar=web/WEB-INF/lib/poi-ooxml-3.11-20141221.jar
+file.reference.poi-ooxml-schemas-3.11-20141221.jar=web/WEB-INF/lib/poi-ooxml-schemas-3.11-20141221.jar
+file.reference.poi-scratchpad-3.11-20141221.jar=web/WEB-INF/lib/poi-scratchpad-3.11-20141221.jar
 file.reference.primefaces-5.2.jar=web/WEB-INF/lib/primefaces-5.2.jar
 includes=**
 j2ee.compile.on.save=true
@@ -44,10 +53,19 @@ j2ee.server.type=JBoss4
 jar.compress=false
 javac.classpath=\
     ${reference.GrupoEmpresarial-ejb.dist}:\
-    ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.primefaces-5.2.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.commons-lang3-3.0.jar}:\
-    ${libs.JasperLibrarie.classpath}
+    ${libs.JasperLibrarie.classpath}:\
+    ${file.reference.poi-3.11.jar}:\
+    ${file.reference.poi-examples-3.11-20141221.jar}:\
+    ${file.reference.poi-excelant-3.11-20141221.jar}:\
+    ${file.reference.poi-ooxml-3.11-20141221.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.11-20141221.jar}:\
+    ${file.reference.poi-scratchpad-3.11-20141221.jar}:\
+    ${file.reference.iText-2.1.7.jar}:\
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-io-2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
