Se modificó: descargar excel

--- a/GrupoEmpresarial-war/src/java/com/dane/main/sistema.properties
+++ b/GrupoEmpresarial-war/src/java/com/dane/main/sistema.properties
@@ -10,3 +10,7 @@ menu.title=Men\u00fa
 # URL reportes
 reporte.grupoEmpresarial.archivo = lista-usuarios.jrxml
 reporte.grupoEmpresarial.path = C:\\datos\\DEE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-grupo-empresarial\\
+
+#URl
+reporte.unidadLegal.archivo = reporte-unidad-legal.jrxml
+reporte.unidadLegal.path = C:\\datos\\DEE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-unidad-legal\\
