--- a/GrupoEmpresarial-war/nbproject/project.properties
+++ b/GrupoEmpresarial-war/nbproject/project.properties
@@ -30,13 +30,21 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=web/WEB-INF/lib/commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=web/WEB-INF/lib/commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=web/WEB-INF/lib/commons-digester-2.1.jar
 file.reference.commons-fileupload-1.3.1.jar=web/WEB-INF/lib/commons-fileupload-1.3.1.jar
 file.reference.commons-io-2.2.jar=web/WEB-INF/lib/commons-io-2.2.jar
+file.reference.commons-javaflow-20060411.jar=web/WEB-INF/lib/commons-javaflow-20060411.jar
 file.reference.commons-lang3-3.0.jar=web/WEB-INF/lib/commons-lang3-3.0.jar
+file.reference.commons-logging-1.1.1.jar=web/WEB-INF/lib/commons-logging-1.1.1.jar
+file.reference.groovy-all-1.7.5.jar=web/WEB-INF/lib/groovy-all-1.7.5.jar
 file.reference.iText-2.1.7.jar=web/WEB-INF/lib/iText-2.1.7.jar
+file.reference.jasperreports-4.7.1.jar=web/WEB-INF/lib/jasperreports-4.7.1.jar
+file.reference.jasperreports-javaflow-4.7.1.jar=web/WEB-INF/lib/jasperreports-javaflow-4.7.1.jar
+file.reference.jxl.jar=web/WEB-INF/lib/jxl.jar
 file.reference.log4j-1.2.17.jar=web/WEB-INF/lib/log4j-1.2.17.jar
 file.reference.poi-3.11.jar=web/WEB-INF/lib/poi-3.11.jar
-file.reference.poi-examples-3.11-20141221.jar=web/WEB-INF/lib/poi-examples-3.11-20141221.jar
 file.reference.poi-excelant-3.11-20141221.jar=web/WEB-INF/lib/poi-excelant-3.11-20141221.jar
 file.reference.poi-ooxml-3.11-20141221.jar=web/WEB-INF/lib/poi-ooxml-3.11-20141221.jar
 file.reference.poi-ooxml-schemas-3.11-20141221.jar=web/WEB-INF/lib/poi-ooxml-schemas-3.11-20141221.jar
@@ -48,24 +56,31 @@ j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=false
 j2ee.platform=1.6
 j2ee.platform.classpath=${j2ee.server.home}/modules/javax/activation/api/main/activation-1.1.1.jar:${j2ee.server.home}/modules/javax/annotation/api/main/jboss-annotations-api_1.1_spec-1.0.0.Final.jar:${j2ee.server.home}/modules/javax/ejb/api/main/jboss-ejb-api_3.1_spec-1.0.1.Final.jar:${j2ee.server.home}/modules/javax/el/api/main/jboss-el-api_2.2_spec-1.0.0.Final.jar:${j2ee.server.home}/modules/javax/enterprise/api/main/cdi-api-1.0-SP4.jar:${j2ee.server.home}/modules/javax/enterprise/deploy/api/main/jboss-jad-api_1.2_spec-1.0.0.Final.jar:${j2ee.server.home}/modules/javax/faces/api/1.2/jsf-api-1.2_15-jbossorg-2.jar:${j2ee.server.home}/modules/javax/faces/api/main/jboss-jsf-api_2.1_spec-2.0.1.Final.jar:${j2ee.server.home}/modules/javax/inject/api/main/javax.inject-1.jar:${j2ee.server.home}/modules/javax/interceptor/api/main/jboss-interceptors-api_1.1_spec-1.0.0.Final.jar:${j2ee.server.home}/modules/javax/jms/api/main/jboss-jms-api_1.1_spec-1.0.0.Final.jar:${j2ee.server.home}/modules/javax/jws/api/main/jsr181-api-1.0-MR1.jar:${j2ee.server.home}/modules/javax/mail/api/main/mail-1.4.4.jar:${j2ee.server.home}/modules/javax/management/j2ee/api/main/jboss-j2eemgmt-api_1.1_spec-1.0.0.Final.jar:${j2ee.server.home}/modules/javax/persistence/api/main/hibernate-jpa-2.0-api-1.0.1.Final.jar:${j2ee.server.home}/modules/javax/resource/api/main/jboss-connector-api_1.6_spec-1.0.0.Final.jar:${j2ee.server.home}/modules/javax/rmi/api/main/jboss-rmi-api_1.0_spec-1.0.4.Final.jar:${j2ee.server.home}/modules/javax/security/auth/message/api/main/jboss-jaspi-api_1.0_spec-1.0.0.Final.jar:${j2ee.server.home}/modules/javax/security/jacc/api/main/jboss-jacc-api_1.4_spec-1.0.1.Final.jar:${j2ee.server.home}/modules/javax/servlet/api/main/jboss-servlet-api_3.0_spec-1.0.0.Final.jar:${j2ee.server.home}/modules/javax/servlet/jsp/api/main/jboss-jsp-api_2.2_spec-1.0.0.Final.jar:${j2ee.server.home}/modules/javax/servlet/jstl/api/main/jboss-jstl-api_1.2_spec-1.0.2.Final.jar:${j2ee.server.home}/modules/javax/transaction/api/main/jboss-transaction-api_1.1_spec-1.0.0.Final.jar:${j2ee.server.home}/modules/javax/validation/api/main/validation-api-1.0.0.GA.jar:${j2ee.server.home}/modules/javax/ws/rs/api/main/jboss-jaxrs-api_1.1_spec-1.0.0.Final.jar:${j2ee.server.home}/modules/javax/wsdl4j/api/main/wsdl4j-1.6.2.jar:${j2ee.server.home}/modules/javax/xml/bind/api/main/jboss-jaxb-api_2.2_spec-1.0.3.Final.jar:${j2ee.server.home}/modules/javax/xml/registry/api/main/jboss-jaxr-api_1.0_spec-1.0.1.Final.jar:${j2ee.server.home}/modules/javax/xml/rpc/api/main/jboss-jaxrpc-api_1.1_spec-1.0.0.Final.jar:${j2ee.server.home}/modules/javax/xml/soap/api/main/jboss-saaj-api_1.3_spec-1.0.1.Final.jar:${j2ee.server.home}/modules/javax/xml/ws/api/main/jboss-jaxws-api_2.2_spec-2.0.0.Final.jar:${j2ee.server.home}/modules/org/hibernate/main/hibernate-commons-annotations-4.0.1.Final.jar:${j2ee.server.home}/modules/org/hibernate/main/hibernate-core-4.0.1.Final.jar:${j2ee.server.home}/modules/org/hibernate/main/hibernate-entitymanager-4.0.1.Final.jar:${j2ee.server.home}/modules/org/hibernate/main/hibernate-infinispan-4.0.1.Final.jar
-j2ee.platform.wscompile.classpath=C:/Program Files (x86)/NetBeans 8.0/saaj-api.jar:C:/Program Files (x86)/NetBeans 8.0/saaj-impl.jar:C:/Program Files (x86)/NetBeans 8.0/jaxrpc-api.jar:C:/Program Files (x86)/NetBeans 8.0/jaxrpc-impl.jar
+j2ee.platform.wscompile.classpath=C:/Program Files (x86)/NetBeans 8.0.2/saaj-api.jar:C:/Program Files (x86)/NetBeans 8.0.2/saaj-impl.jar:C:/Program Files (x86)/NetBeans 8.0.2/jaxrpc-api.jar:C:/Program Files (x86)/NetBeans 8.0.2/jaxrpc-impl.jar
 j2ee.server.type=JBoss4
 jar.compress=false
 javac.classpath=\
     ${reference.GrupoEmpresarial-ejb.dist}:\
     ${file.reference.primefaces-5.2.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.iText-2.1.7.jar}:\
+    ${file.reference.jasperreports-4.7.1.jar}:\
+    ${file.reference.jasperreports-javaflow-4.7.1.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
     ${file.reference.commons-lang3-3.0.jar}:\
-    ${libs.JasperLibrarie.classpath}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-io-2.2.jar}:\
     ${file.reference.poi-3.11.jar}:\
-    ${file.reference.poi-examples-3.11-20141221.jar}:\
     ${file.reference.poi-excelant-3.11-20141221.jar}:\
-    ${file.reference.poi-ooxml-3.11-20141221.jar}:\
     ${file.reference.poi-ooxml-schemas-3.11-20141221.jar}:\
     ${file.reference.poi-scratchpad-3.11-20141221.jar}:\
-    ${file.reference.iText-2.1.7.jar}:\
-    ${file.reference.commons-fileupload-1.3.1.jar}:\
-    ${file.reference.commons-io-2.2.jar}
+    ${file.reference.poi-ooxml-3.11-20141221.jar}:\
+    ${file.reference.groovy-all-1.7.5.jar}:\
+    ${file.reference.jxl.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
