--- a/GrupoEmpresarial-war/src/java/com/dane/main/sistema.properties
+++ b/GrupoEmpresarial-war/src/java/com/dane/main/sistema.properties
@@ -7,10 +7,12 @@ footer.copyright=@DANE
 
 menu.title=Men\u00fa
 
-# URL reportes
+# URL reportes - JasperReport
 reporte.grupoEmpresarial.archivo = lista-usuarios.jrxml
 reporte.grupoEmpresarial.path = C:\\datos\\DEE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-grupo-empresarial\\
 
-#URl
 reporte.unidadLegal.archivo = reporte-unidad-legal.jrxml
 reporte.unidadLegal.path = C:\\datos\\DEE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-unidad-legal\\
+# URL Plantillas - Excel
+plantilla.grupoEmpresarial.archivo = Formulario Grupo Empresarial.xls
+plantilla.grupoEmpresarial.path = C:\\datos\\DEE\\PLANTILLAS-EXCEL\\GRUPOS-EMPRESARIALES\\plantilla-grupo-empresarial\\
