--- a/GrupoEmpresarial-war/web/WEB-INF/web.xml
+++ b/GrupoEmpresarial-war/web/WEB-INF/web.xml
@@ -30,6 +30,10 @@
         <param-name>primefaces.THEME</param-name>
         <param-value>bootstrap</param-value>
     </context-param>
+    <context-param>
+        <param-name>primefaces.FONT_AWESOME</param-name>
+        <param-value>true</param-value>
+    </context-param>
 
     <filter>
         <filter-name>PrimeFaces FileUpload Filter</filter-name>
@@ -48,9 +52,12 @@
         <filter-name>Filtro</filter-name>
         <filter-class>com.dane.ige.seguridad.Filtro</filter-class>
     </filter>
-    <filter-mapping>
+    <!--filter-mapping>
         <filter-name>Filtro</filter-name>
         <url-pattern>/interfaz/*</url-pattern>
+    </filter-mapping-->
+    <filter-mapping>
+        <filter-name>Filtro</filter-name>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
-    
 </web-app>
