12-Commit Con la entrega de la bodega de datos, se realizo la primera implementación del llamado de los datos para el grupo empresarial y su respectiva visualización en el formulario. Se crearon las entidades, fachada local y servicio sobre las tablas de: - Identificacion, Novedad, Relacion y Tamañlo.

--- a/GrupoEmpresarial-war/src/java/com/dane/main/sistema.properties
+++ b/GrupoEmpresarial-war/src/java/com/dane/main/sistema.properties
@@ -8,11 +8,21 @@ footer.copyright=@DANE
 menu.title=Men\u00fa
 
 # URL reportes - JasperReport
-reporte.grupoEmpresarial.archivo = lista-usuarios.jrxml
+reporte.grupoEmpresarial.archivo = reporte-grupo-empresa.jrxml
 reporte.grupoEmpresarial.path = C:\\datos\\DEE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-grupo-empresarial\\
 
 reporte.unidadLegal.archivo = reporte-unidad-legal.jrxml
 reporte.unidadLegal.path = C:\\datos\\DEE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-unidad-legal\\
+
+reporte.establecimiento.archivo = reporte-establecimiento.jrxml
+reporte.establecimiento.path = C:\\datos\\DEE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-establecimiento\\
+
 # URL Plantillas - Excel
 plantilla.grupoEmpresarial.archivo = Formulario Grupo Empresarial.xls
 plantilla.grupoEmpresarial.path = C:\\datos\\DEE\\PLANTILLAS-EXCEL\\GRUPOS-EMPRESARIALES\\plantilla-grupo-empresarial\\
+
+plantilla.unidadLegal.archivo = Formulario Unidad Legal.xls
+plantilla.unidadLegal.path = C:\\datos\\DEE\\PLANTILLAS-EXCEL\\GRUPOS-EMPRESARIALES\\plantilla-unidad-legal\\
+
+plantilla.estabkecimiento.archivo = Formulario Establecimiento.xls
+plantilla.estabkecimiento.path = C:\\datos\\DEE\\PLANTILLAS-EXCEL\\GRUPOS-EMPRESARIALES\\plantilla-establecimiento\\
