--- a/GrupoEmpresarial-war/nbproject/project.properties
+++ b/GrupoEmpresarial-war/nbproject/project.properties
@@ -51,7 +51,7 @@ file.reference.poi-ooxml-schemas-3.11-20141221.jar=web/WEB-INF/lib/poi-ooxml-sch
 file.reference.poi-scratchpad-3.11-20141221.jar=web/WEB-INF/lib/poi-scratchpad-3.11-20141221.jar
 file.reference.primefaces-5.2.jar=web/WEB-INF/lib/primefaces-5.2.jar
 includes=**
-j2ee.compile.on.save=true
+j2ee.compile.on.save=false
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=false
 j2ee.platform=1.6
