17-Commit Ajustes en la visualizaciónd e los reportes y mejoras visuales.

--- a/GrupoEmpresarial-war/src/java/com/dane/main/sistema.properties
+++ b/GrupoEmpresarial-war/src/java/com/dane/main/sistema.properties
@@ -11,9 +11,13 @@ menu.title=Men\u00fa
 reporte.grupoEmpresarial.archivo = reporte-grupo-empresa.jrxml
 reporte.grupoEmpresarial.path = C:\\datos\\DEE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-grupo-empresarial\\
 
+reporte.unidadLegales.archivo = reporte-unidad-legales.jrxml
+reporte.unidadLegales.path = C:\\datos\\DEE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-unidad-legal\\
 reporte.unidadLegal.archivo = reporte-unidad-legal.jrxml
 reporte.unidadLegal.path = C:\\datos\\DEE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-unidad-legal\\
 
+reporte.establecimientos.archivo = reporte-establecimientos.jrxml
+reporte.establecimientos.path = C:\\datos\\DEE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-establecimiento\\
 reporte.establecimiento.archivo = reporte-establecimiento.jrxml
 reporte.establecimiento.path = C:\\datos\\DEE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-establecimiento\\
 
