19-Commit MEJORA en la iplementación de un 95% en escritura del excel para las unidades de grupo empresarial, unidades legales y establecimientos.

--- a/GrupoEmpresarial-war/src/java/com/dane/main/sistema.properties
+++ b/GrupoEmpresarial-war/src/java/com/dane/main/sistema.properties
@@ -28,5 +28,5 @@ plantilla.grupoEmpresarial.path = C:\\datos\\DEE\\PLANTILLAS-EXCEL\\GRUPOS-EMPRE
 plantilla.unidadLegal.archivo = Formulario Unidad Legal.xls
 plantilla.unidadLegal.path = C:\\datos\\DEE\\PLANTILLAS-EXCEL\\GRUPOS-EMPRESARIALES\\plantilla-unidad-legal\\
 
-plantilla.estabkecimiento.archivo = Formulario Establecimiento.xls
-plantilla.estabkecimiento.path = C:\\datos\\DEE\\PLANTILLAS-EXCEL\\GRUPOS-EMPRESARIALES\\plantilla-establecimiento\\
+plantilla.establecimiento.archivo = Formulario Establecimiento.xls
+plantilla.establecimiento.path = C:\\datos\\DEE\\PLANTILLAS-EXCEL\\GRUPOS-EMPRESARIALES\\plantilla-establecimientos\\
