--- a/GrupoEmpresarial-war/nbproject/project.properties
+++ b/GrupoEmpresarial-war/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.commons-javaflow-20060411.jar=web/WEB-INF/lib/commons-javaflow-20
 file.reference.commons-lang3-3.0.jar=web/WEB-INF/lib/commons-lang3-3.0.jar
 file.reference.commons-logging-1.1.1.jar=web/WEB-INF/lib/commons-logging-1.1.1.jar
 file.reference.groovy-all-1.7.5.jar=web/WEB-INF/lib/groovy-all-1.7.5.jar
+file.reference.gson-2.3.1.jar=web/WEB-INF/lib/gson-2.3.1.jar
 file.reference.iText-2.1.7.jar=web/WEB-INF/lib/iText-2.1.7.jar
 file.reference.jasperreports-4.7.1.jar=web/WEB-INF/lib/jasperreports-4.7.1.jar
 file.reference.jasperreports-javaflow-4.7.1.jar=web/WEB-INF/lib/jasperreports-javaflow-4.7.1.jar
@@ -80,7 +81,8 @@ javac.classpath=\
     ${file.reference.poi-scratchpad-3.11-20141221.jar}:\
     ${file.reference.poi-ooxml-3.11-20141221.jar}:\
     ${file.reference.groovy-all-1.7.5.jar}:\
-    ${file.reference.jxl.jar}
+    ${file.reference.jxl.jar}:\
+    ${file.reference.gson-2.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
