35-Commit Se realizo una mejora  respecto al manejo de rutas de los arhcivos de reporte y plantillas xls. Se generan dinamicanmente los reportes en PDF si crear archivos temporales. Se generan los archivo xls en una carpeta temporal fija. "Mantiene código sin depurar!

--- a/GrupoEmpresarial-ejb/nbproject/project.properties
+++ b/GrupoEmpresarial-ejb/nbproject/project.properties
@@ -34,7 +34,8 @@ jar.compress=false
 jar.name=GrupoEmpresarial-ejb.jar
 jars.in.ejbjar=false
 javac.classpath=\
-    ${file.reference.commons-lang3-3.0.jar}
+    ${file.reference.commons-lang3-3.0.jar}:\
+    ${libs.Apache Log4j.classpath}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
