--- a/GrupoEmpresarial-war/nbproject/project.properties
+++ b/GrupoEmpresarial-war/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.gson-2.3.1.jar=web/WEB-INF/lib/gson-2.3.1.jar
 file.reference.iText-2.1.7.jar=web/WEB-INF/lib/iText-2.1.7.jar
 file.reference.jasperreports-4.7.1.jar=web/WEB-INF/lib/jasperreports-4.7.1.jar
 file.reference.jasperreports-javaflow-4.7.1.jar=web/WEB-INF/lib/jasperreports-javaflow-4.7.1.jar
+file.reference.jsf-api-2.2.8.jar=web/WEB-INF/lib/jsf-api-2.2.8.jar
 file.reference.jxl.jar=web/WEB-INF/lib/jxl.jar
 file.reference.log4j-1.2.17.jar=web/WEB-INF/lib/log4j-1.2.17.jar
 file.reference.poi-3.11.jar=web/WEB-INF/lib/poi-3.11.jar
@@ -51,6 +52,9 @@ file.reference.poi-ooxml-3.11-20141221.jar=web/WEB-INF/lib/poi-ooxml-3.11-201412
 file.reference.poi-ooxml-schemas-3.11-20141221.jar=web/WEB-INF/lib/poi-ooxml-schemas-3.11-20141221.jar
 file.reference.poi-scratchpad-3.11-20141221.jar=web/WEB-INF/lib/poi-scratchpad-3.11-20141221.jar
 file.reference.primefaces-5.2.jar=web/WEB-INF/lib/primefaces-5.2.jar
+file.reference.primefaces-extensions-3.2.0.jar=web/WEB-INF/lib/primefaces-extensions-3.2.0.jar
+file.reference.resources-ckeditor-3.2.0.jar=web/WEB-INF/lib/resources-ckeditor-3.2.0.jar
+file.reference.resources-codemirror-3.2.0.jar=web/WEB-INF/lib/resources-codemirror-3.2.0.jar
 includes=**
 j2ee.compile.on.save=false
 j2ee.copy.static.files.on.save=true
@@ -63,11 +67,12 @@ jar.compress=false
 javac.classpath=\
     ${reference.GrupoEmpresarial-ejb.dist}:\
     ${file.reference.primefaces-5.2.jar}:\
+    ${file.reference.primefaces-extensions-3.2.0.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.iText-2.1.7.jar}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
     ${file.reference.jasperreports-4.7.1.jar}:\
     ${file.reference.jasperreports-javaflow-4.7.1.jar}:\
-    ${file.reference.commons-beanutils-1.8.2.jar}:\
     ${file.reference.commons-lang3-3.0.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
@@ -82,7 +87,10 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.11-20141221.jar}:\
     ${file.reference.groovy-all-1.7.5.jar}:\
     ${file.reference.jxl.jar}:\
-    ${file.reference.gson-2.3.1.jar}
+    ${file.reference.gson-2.3.1.jar}:\
+    ${file.reference.resources-ckeditor-3.2.0.jar}:\
+    ${file.reference.resources-codemirror-3.2.0.jar}:\
+    ${file.reference.jsf-api-2.2.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
