--- a/GrupoEmpresarial-war/web/WEB-INF/web.xml
+++ b/GrupoEmpresarial-war/web/WEB-INF/web.xml
@@ -34,6 +34,10 @@
         <param-name>primefaces.FONT_AWESOME</param-name>
         <param-value>true</param-value>
     </context-param>
+    <context-param>
+        <param-name>org.primefaces.extensions.DELIVER_UNCOMPRESSED_RESOURCES</param-name>
+        <param-value>false</param-value>
+    </context-param>
     <!-- web fonts -->
     <mime-mapping>
         <extension>eot</extension>
