37-Commit Commit antes de iniciar la implementación de los ajustes de las observaciones generadas de las primeras pruebas por parte de Ana Cecilia

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,12 @@
 /GrupoEmpresarial-ejb/nbproject/private/
 /GrupoEmpresarial-war/build/
 /build/
+/SistemaInformacionDirectorio/nbproject/private/
+/SistemaInformacionDirectorio/Sid-war/nbproject/private/
+/SistemaInformacionDirectorio/Sid-ejb/nbproject/private/
+/SistemaDeInformacionDeDirectorios/nbproject/private/
+/SistemaDeInformacionDeDirectorios/Sid-war/nbproject/private/
+/SistemaDeInformacionDeDirectorios/Sid-ejb/nbproject/private/
+/SistemaInformacionDirectorios/nbproject/private/
+/SistemaInformacionDirectorios/Sid-war/nbproject/private/
+/SistemaInformacionDirectorios/Sid-ejb/nbproject/private/
