41 Commit Se inicia el desarrollo del borrador de la interfaz para la generación de los informes ejecutivos

--- a/GrupoEmpresarial-war/src/java/path_unix.properties
+++ b/GrupoEmpresarial-war/src/java/path_unix.properties
@@ -27,6 +27,5 @@ plantilla.establecimiento.path = /datos/IGE/PLANTILLAS-EXCEL/GRUPOS-EMPRESARIALE
 
 
 
-
 #------------------------------- Parametros Seguridad (AMBIENTE-PRODUCCION)
-login.keyEncrypt=4dac0036b0b6fc17582ji69373y788r6
+login.password.keyEncrypt=4dac0036b0b6fc17582ji69373y788r6
