--- a/GrupoEmpresarial-war/src/java/path_windows.properties
+++ b/GrupoEmpresarial-war/src/java/path_windows.properties
@@ -15,6 +15,10 @@ reporte.establecimientos.path = C:\\datos\\IGE\\PLANTILLAS-REPORTES\\GRUPOS-EMPR
 reporte.establecimiento.archivo = reporte-establecimiento.jrxml
 reporte.establecimiento.path = C:\\datos\\IGE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\reporte-establecimiento\\
 
+informe.grupoEmpresarial.archivo = informe-grupo-empresa.jrxml
+informe.grupoEmpresarial.path = C:\\datos\\IGE\\PLANTILLAS-REPORTES\\GRUPOS-EMPRESARIALES\\informe-grupo-empresarial\\
+
+
 #------------------------------- URL Plantillas - Excel (AMBIENTE-DESARROLLO)
 plantilla.grupoEmpresarial.archivo = Formulario Grupo Empresarial.xls
 plantilla.grupoEmpresarial.path = C:\\datos\\IGE\\PLANTILLAS-EXCEL\\GRUPOS-EMPRESARIALES\\plantilla-grupo-empresarial\\
@@ -24,7 +28,6 @@ plantilla.unidadLegal.path = C:\\datos\\IGE\\PLANTILLAS-EXCEL\\GRUPOS-EMPRESARIA
 
 plantilla.establecimiento.archivo = Formulario Establecimiento.xls
 plantilla.establecimiento.path = C:\\datos\\IGE\\PLANTILLAS-EXCEL\\GRUPOS-EMPRESARIALES\\plantilla-establecimientos\\
-
 
 
 #------------------------------- Parametros Seguridad (AMBIENTE-PRODUCCION)
