--- a/GrupoEmpresarial-war/nbproject/project.properties
+++ b/GrupoEmpresarial-war/nbproject/project.properties
@@ -37,9 +37,10 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.commons-beanutils-1.8.2.jar=web/WEB-INF/lib/commons-beanutils-1.8.2.jar
+file.reference.commons-codec-1.10.jar=web/WEB-INF/lib/commons-codec-1.10.jar
 file.reference.commons-collections-3.2.1.jar=web/WEB-INF/lib/commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=web/WEB-INF/lib/commons-digester-2.1.jar
-file.reference.commons-email-1.4.jar=C:\\Users\\srojasm\\Documents\\NetBeansProjects\\SistemaInformacionDirectorios\\Sid-war\\web\\WEB-INF\\lib\\commons-email-1.4.jar
+file.reference.commons-email-1.4.jar=web/WEB-INF/lib/commons-email-1.4.jar
 file.reference.commons-fileupload-1.3.1.jar=web/WEB-INF/lib/commons-fileupload-1.3.1.jar
 file.reference.commons-io-2.2.jar=web/WEB-INF/lib/commons-io-2.2.jar
 file.reference.commons-javaflow-20060411.jar=web/WEB-INF/lib/commons-javaflow-20060411.jar
@@ -50,6 +51,8 @@ file.reference.gson-2.3.1.jar=web/WEB-INF/lib/gson-2.3.1.jar
 file.reference.iText-2.1.7.jar=web/WEB-INF/lib/iText-2.1.7.jar
 file.reference.jasperreports-4.7.1.jar=web/WEB-INF/lib/jasperreports-4.7.1.jar
 file.reference.jasperreports-javaflow-4.7.1.jar=web/WEB-INF/lib/jasperreports-javaflow-4.7.1.jar
+file.reference.jcommon-1.0.15.jar=web/WEB-INF/lib/jcommon-1.0.15.jar
+file.reference.jfreechart-1.0.12.jar=web/WEB-INF/lib/jfreechart-1.0.12.jar
 file.reference.jsf-api-2.2.8.jar=web/WEB-INF/lib/jsf-api-2.2.8.jar
 file.reference.jxl.jar=web/WEB-INF/lib/jxl.jar
 file.reference.log4j-1.2.17.jar=web/WEB-INF/lib/log4j-1.2.17.jar
@@ -98,7 +101,10 @@ javac.classpath=\
     ${file.reference.resources-ckeditor-3.2.0.jar}:\
     ${file.reference.resources-codemirror-3.2.0.jar}:\
     ${file.reference.jsf-api-2.2.8.jar}:\
-    ${file.reference.commons-email-1.4.jar}
+    ${file.reference.commons-email-1.4.jar}:\
+    ${file.reference.jcommon-1.0.15.jar}:\
+    ${file.reference.jfreechart-1.0.12.jar}:\
+    ${file.reference.commons-codec-1.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
