42 Commit -Se realizan los primeros ajustes tras el cargue inicial de prueba de la información de los grupos. Se elimina la columna OTRAS_ACTIVIDADES_EST_ de la tabla IGE_IDENTIFICACION, remplazada por ACTIVIDAD_SECUNDARIA. -Se elimina la funcionalidad de convertir a Mayuscula sostenida la información de los formularios. - Entre otros.

--- a/GrupoEmpresarial-war/src/java/path_unix.properties
+++ b/GrupoEmpresarial-war/src/java/path_unix.properties
@@ -15,6 +15,10 @@ reporte.establecimientos.path = /datos/IGE/PLANTILLAS-REPORTES/GRUPOS-EMPRESARIA
 reporte.establecimiento.archivo = reporte-establecimiento.jrxml
 reporte.establecimiento.path = /datos/IGE/PLANTILLAS-REPORTES/GRUPOS-EMPRESARIALES/reporte-establecimiento/
 
+informe.grupoEmpresarial.archivo = informe-grupo-empresa.jrxml
+informe.grupoEmpresarial.path = /datos/IGE/PLANTILLAS-REPORTES/GRUPOS-EMPRESARIALES/informe-grupo-empresarial/
+
+
 #------------------------------- URL Plantillas - Excel (AMBIENTE-PRODUCCION)
 plantilla.grupoEmpresarial.archivo = Formulario Grupo Empresarial.xls
 plantilla.grupoEmpresarial.path = /datos/IGE/PLANTILLAS-EXCEL/GRUPOS-EMPRESARIALES/plantilla-grupo-empresarial/
@@ -24,7 +28,6 @@ plantilla.unidadLegal.path = /datos/IGE/PLANTILLAS-EXCEL/GRUPOS-EMPRESARIALES/pl
 
 plantilla.establecimiento.archivo = Formulario Establecimiento.xls
 plantilla.establecimiento.path = /datos/IGE/PLANTILLAS-EXCEL/GRUPOS-EMPRESARIALES/plantilla-establecimientos/
-
 
 
 #------------------------------- Parametros Seguridad (AMBIENTE-PRODUCCION)
