43 Commit -Despues de mucho adelantos, se parametriza la aplicación para iniciar el desarrollo de dos versiones de formularios para la captura de la información de los grupos empresariales, unidades legales y establecimientos. - Se implementa una plantilla sin el menu en la izquierda y se crean perfiles para el uso de esas plantillas

--- a/GrupoEmpresarial-war/src/java/sistema.properties
+++ b/GrupoEmpresarial-war/src/java/sistema.properties
@@ -16,3 +16,6 @@ sistema.email.port=26
 sistema.email.username=directorio_sid
 sistema.email.password=D1R40ty
 sistema.email.emailorigen=directorio_sid@dane.gov.co
+#sistema.email.username=srojasm
+#sistema.email.password=S4rM1
+#sistema.email.emailorigen=srojasm@dane.gov.co
