--- a/GrupoEmpresarial-war/web/WEB-INF/web.xml
+++ b/GrupoEmpresarial-war/web/WEB-INF/web.xml
@@ -4,22 +4,26 @@
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
     <session-config>
-        <session-timeout>8</session-timeout>
+        <session-timeout>45</session-timeout>
     </session-config>
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-        <load-on-startup>1</load-on-startup>
     </servlet>
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
+    <listener>
+        <listener-class>com.sun.faces.config.ConfigureListener</listener-class>
+    </listener>
+
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <!--param-value>Development</param-value-->
         <param-value>Production</param-value>
     </context-param>
+
     <!-- Definir este parámetro es más cómodo y más visual que usar el <ui:remove> de Facelets. -->
     <context-param>
         <description>Do not render comments in facelets (xhtml) pages. Default is false.</description>
